sezione-07/lezione-097/ingress-wear-watch.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/wear"
        backend:
          service:
            name: wear-service
            port:
              number: 80
      - pathType: Prefix
        path: "/watch"
        backend:
          service:
            name: watch-service
            port:
              number: 80
