sezione-07/lezione-097/ingress-wear.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear
spec:
  rules:
  - host: "www.my-online-store.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wear-service
            port:
              number: 80
